package cienciasucv.Views.AdminViews;

public class CreateExamView {

    CreateExamView(){
        
    }
    
}
